Remove OTel related deprecated